# rec-sample

./: 1_feature_processing.ipynb  2_train_two_tower_model.ipynb  README.md  docker-compose.yml  feature_processing.ipynb  init.sql  pyproject.toml
.github/workflows/: d-day-labeler.yml  sample.yml
models/: item_tower.py  query_tower.py  two_tower_model.py
