[tool.poetry]
name = "rec-sample"
version = "0.1.0"
description = "추천 시스템 데모"
authors = ["유지민 <86466319+jimin-yu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
fastparquet = "^2024.2.0"
sqlalchemy = "^2.0.29"
mysql-connector-python = "^8.3.0"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
